# Wan-Trainer

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
configs/: train_cos.yaml  train_cos_maze.yaml  train_cos_maze_2.yaml  train_cos_maze_cos_path.yaml  train_cos_maze_cos_path_2.yaml  train_cos_maze_linear_path.yaml  train_cube_1step.yaml  train_cube_1step_w_text.yaml  train_cube_test.yaml  train_cube_test_flex.yaml  train_grpo.yaml  train_i2v.json  train_i2v.yaml  train_i2v_lora.json  train_i2v_lora.yaml  train_i2v_test_nolora.json  train_i2v_test_nolora.yaml  train_sft_cube_wangruisi.yaml  train_sft_maze.yaml  train_vbvr.yaml
data/: cube_1step.json  cube_1step_more_data.json  cube_1step_more_data_w_text.json  cube_train.json  train.json  vbvr.json
docs/: cos_trainer.md
scripts/: demo_target_paths.py  download.fish
scripts/eval/: eval_sft_maze.fish
scripts/inference/: i2v.fish  i2v.py  inference.fish  test_vae.fish
scripts/train/: grpo.fish  i2v.fish  i2v.py  i2v_multinode.fish
src/cli/: eval_i2v.py  eval_maze.py  infer_i2v.py  migrate_ema_to_dcp.py  test_vae.py  train_cos.py  train_grpo.py  train_i2v.py
src/data/: i2v_dataset.py
src/models/: cos_path.py  wan_i2v.py
src/models/configs/: __init__.py  shared_config.py  wan_animate_14B.py  wan_s2v_14B.py
src/trainer/: __init__.py  base_trainer.py  checkpoint.py  config.py  cos_trainer.py  ema.py  flops.py  grpo_trainer.py  i2v_trainer.py  utils.py
tests/: test_consistency.py
